--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div id="bulb"></div>
-    <button>ON</button>
-  
+    <main>
+        <h3>*****</h3>
+        <h2>****</h2>
+        <h1>***</h1>
+        <button>change</button>
+        </div>
+    </main>
+
     <script src="script.js"></script>
 </body>
+
 </html>
